--- a/sections/应用随机过程.tex
+++ b/sections/应用随机过程.tex
@@ -164,9 +164,10 @@ I think the idea here is similar to Gram-Schmidt orthogonalization (\autoref{Sub
 
 
 
-\subsection{Markov Process}
+\subsection{Stochastic Process}
+(Or sometimes called random process)
 
-\subsubsection{Stochastic Process}
+\subsubsection{Basic Concepts}
 Some basic concepts are introduced in \autoref{SubSectionStochasticProcessForTimeSeries}. Here's a brief recap.
 
 A stochastic process is a mapping
@@ -386,7 +387,7 @@ A basic case for Markov Chain is Discrete Time Markov Chain (DTMC)(\index{DTMC} 
         \end{align*}
         \item Classification of States. 
         
-        Denote minimum arrival time $ \tau_i $ and mean recurrent
+        Denote Hitting Time $ \tau_i $ and its mean \index{Hitting Time}
         \begin{align*}
             \tau_i:=&\min\{k\geq 1:X_k=i\}\\
             \mu _i:=&\mathbb{E}\left[ \tau_i|X_0=i \right] 
@@ -477,7 +478,7 @@ Given irreducible \& aperiodic DTMC, we have
     \item All states have the same state classification: null recurrent / positive recurrent / transient.
     \item if all states are positive recurrent $ \mu _i<\infty $, then stationary distribution exists.
     \begin{align*}
-        \lim_{n\to \infty}\dfrac{1}{n}\sum_{l=1}^n(P^l)_{ij}=\dfrac{1}{\mu _j}\Rightarrow \pi_i(\infty)=(\pi(0)P^\infty)_i= \dfrac{1}{\mu _i},\quad \forall \pi(0)
+        \lim_{n\to \infty}\dfrac{1}{n}\sum_{l=1}^n(P^l)_{ij}=\dfrac{1}{\mu _i}\Rightarrow \pi_i(\infty)=(\pi(0)P^\infty)_i= \dfrac{1}{\mu _i},\, \forall \pi(0)
     \end{align*}
     \item Further if states are positive recurrent $ \mu _i<\infty $, then $ \pi^*=\pi(\infty)=[1/\mu _i] $ is the stationary distribution.
 
@@ -488,3 +489,62 @@ Given irreducible \& aperiodic DTMC, we have
 Some algorithm about Markov Chain see \autoref{SubSubSectionMCMCAlgorithm}.
 
 
+
+
+\subsubsection{Random Walk}
+
+A random walk is described as
+\begin{align*}
+    X_n:=&X_0+W_1+W_2+\ldots+W_n\\
+    X_0=&k\\
+    W_i=&\begin{cases}
+        +1,&\mathrm{w.p.} p\\
+        -1,&\mathrm{w.p.} q=1-p 
+    \end{cases}
+\end{align*}
+
+
+
+mean hitting time $ k\leadsto \{0,N\} $
+\begin{align*}
+    \mu _k=\dfrac{\left(1-(q/p)^k\right)N-k}{\left(1-(q/p)^N\right)(p-q)} 
+\end{align*}
+
+
+polya: for $ d $-dimensional homogeneous random walk, i.e. $ p=1/4 $ for 2 dim, $ p=1/6 $ for 3 dim ... If $ d=1,2 $, null recurrent, If $ d\geq 3 $, transient.
+
+
+\subsubsection{Branching Process}
+
+Galton-Watson branching process example: nuclear fisson.
+
+
+
+
+
+% \begin{center}
+%     \begin{tikzpicture}
+%     \GraphInit[vstyle=Dijkstra]
+%     \SetGraphUnit{2}
+%         \tikzset{VertexStyle/.style = {
+%             shape = circle,
+%             color = black,
+%             text = black,
+%             minimum size = 20,
+%             draw}}
+%         \Vertices{line}{1,2}
+%         \SO(1){3}
+%         \SO(2){4}
+%         \tikzset{LabelStyle/.style={fill = white}, EdgeStyle/.style={-stealth}}
+%         \Edge[label = 1/4](1)(3)
+%         \Edge[label = 1/4](2)(4)
+%         \Loop[dist = 2cm, dir = NOWE, label = 1/2](1)
+
+%         \tikzset{EdgeStyle/.style={-stealth, bend right}}
+
+
+   
+
+
+%     \end{tikzpicture}
+%     \end{center}
